# TuiTalk

./: README.md  docker-compose.yaml  flake.nix
latex-docs/: .gitignore  bibliographie.bib  main.tex
latex-docs/config/: cover.tex
latex-docs/config/lang/: de.tex
latex-docs/content/: abstract.tex  acronyms.tex  appendix.tex  documentInfo.tex
latex-docs/content/chapter/: 01.tex  02.tex  03.tex  04.tex
presentation/: README.md  presentation.md
redis/: redis-cluster.tmpl.conf
rust/: Cargo.toml  Dockerfile  Dockerfile.wasm
rust/client/: Cargo.toml
rust/client/src/: app.rs  command.rs  main.rs  ui.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/tuitalk/src/: app.rs  command.rs  main.rs  ui.rs
rust/wasm-client/: Cargo.toml  styles.css
rust/wasm-client/src/: command.rs  main.rs  wasm_client.rs
rust/ws-server/: Cargo.toml
rust/ws-server/src/: main.rs  wsserver.rs
rust/ws-server/src/database/: connection.rs
rust/ws-server/src/redis/: mod.rs
