[package]
name = "tuitalk"
version = "0.1.1"
edition = "2024"
homepage = "https://github.com/itsanian/tuitalk"
repository = "https://github.com/itsanian/tuitalk"
description = "tuitalk chatapp client which runs in the terminal"
license = "MIT OR Apache-2.0"

[dependencies]
tuitalk-shared = {version = "0.1.0", path = "../shared"}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
futures-channel = "0.3"
serde = "1.0.219"
bincode = "1.3"
color-eyre = "0.6.5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
chrono = "0.4"
anyhow = "1.0.99"
dirs = "5.0"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4", "serde"
]
