[package]
name = "tuitalk-shared"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/itsanian/tuitalk"
repository = "https://github.com/itsanian/tuitalk"
description = "Shared code / Library for the chatapp tuitalk"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util = "0.3"
futures-channel = "0.3"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
gloo-net = { version = "0.2", features = ["websocket"] }
gloo-utils = "0.1.7"
yew = { version = "0.20", features = ["csr"] }
log = "0.4"
console_log = "0.2"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4", "serde"
]

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"

